--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,11 @@
     color: purple;
     font-size: 90px;
 } */
-/* *{
+*{
     margin: 0;
     padding: 0;
     font-family: monospace;
-} */
+}
 
 body{
     font-size: 30px;
@@ -20,7 +20,6 @@ p{
 }
 #trial{
     color: pink;
-    background-color: gray;
 }
 
 
